--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello world!!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Brief IRC</title>
     </head>
     <body>
         <div id="container"></div>
